--- a/tests/app/navigation/navigation.html
+++ b/tests/app/navigation/navigation.html
@@ -4,26 +4,31 @@
         <nav class="m-u--margin-top">
             <ul class="m-navigation__submenu">
                 <li>
-                    <m-link mode="link" href="#component">Components</m-link>
+                    <m-link url="#component">Components</m-link>
                 </li>
                 <li>
-                    <m-link mode="link" href="#directives">Directives</m-link>
+                    <m-link url="#directives">Directives</m-link>
                 </li>
                 <li>
-                    <m-link mode="link" href="#filters">Filters</m-link>
+                    <m-link url="#filters">Filters</m-link>
                 </li>
                 <li>
-                    <m-link mode="link" href="#mixins">Mixins</m-link>
+                    <m-link url="#mixins">Mixins</m-link>
                 </li>
                 <li>
-                    <m-link mode="link" href="#services">Services</m-link>
+                    <m-link url="#services">Services</m-link>
                 </li>
             </ul>
         </nav>
     </div>
 
-    <a class="anchor" id="component"></a>
-    <h2 class="m-u--no-margin">Components <m-link href="#" mode="link" @click="scrollToTop()"><m-icon name="m-svg__arrow-thin--up" size="16px"></m-icon></m-link>
+    <a class="anchor"
+       id="component"></a>
+    <h2 class="m-u--no-margin">Components <m-link href="#"
+                @click="scrollToTop()">
+            <m-icon name="m-svg__arrow-thin--up"
+                    size="16px"></m-icon>
+        </m-link>
     </h2>
     <nav class="m-u--margin-top">
         <ul class="m-u--bullet-list">
@@ -32,8 +37,13 @@
             </li>
         </ul>
     </nav>
-    <a class="anchor" id="directives"></a>
-    <h2>Directives <m-link href="#" mode="link" @click="scrollToTop()"><m-icon name="m-svg__arrow-thin--up" size="16px" ></m-icon></m-link>
+    <a class="anchor"
+       id="directives"></a>
+    <h2>Directives <m-link href="#"
+                @click="scrollToTop()">
+            <m-icon name="m-svg__arrow-thin--up"
+                    size="16px"></m-icon>
+        </m-link>
     </h2>
     <nav class="m-u--margin-top">
         <ul class="m-u--bullet-list">
@@ -42,8 +52,13 @@
             </li>
         </ul>
     </nav>
-    <a class="anchor" id="filters"></a>
-    <h2>Filters  <m-link href="#" mode="link" @click="scrollToTop()"><m-icon name="m-svg__arrow-thin--up" size="16px"></m-icon></m-link>
+    <a class="anchor"
+       id="filters"></a>
+    <h2>Filters <m-link href="#"
+                @click="scrollToTop()">
+            <m-icon name="m-svg__arrow-thin--up"
+                    size="16px"></m-icon>
+        </m-link>
     </h2>
     <nav class="m-u--margin-top">
         <ul class="m-u--bullet-list">
@@ -52,8 +67,13 @@
             </li>
         </ul>
     </nav>
-    <a class="anchor" id="mixins"></a>
-    <h2>Mixins <m-link href="#" mode="link" @click="scrollToTop()"><m-icon name="m-svg__arrow-thin--up" size="16px"></m-icon></m-link>
+    <a class="anchor"
+       id="mixins"></a>
+    <h2>Mixins <m-link href="#"
+                @click="scrollToTop()">
+            <m-icon name="m-svg__arrow-thin--up"
+                    size="16px"></m-icon>
+        </m-link>
     </h2>
     <nav class="m-u--margin-top">
         <ul class="m-u--bullet-list">
@@ -63,8 +83,13 @@
         </ul>
 
     </nav>
-    <a class="anchor" id="services"></a>
-    <h2>Services  <m-link href="#" mode="link" @click="scrollToTop()"><m-icon name="m-svg__arrow-thin--up" size="16px"></m-icon></m-link>
+    <a class="anchor"
+       id="services"></a>
+    <h2>Services <m-link href="#"
+                @click="scrollToTop()">
+            <m-icon name="m-svg__arrow-thin--up"
+                    size="16px"></m-icon>
+        </m-link>
     </h2>
     <nav class="m-u--margin-top">
         <ul class="m-u--bullet-list">
