--- a/tests/app/viewer/viewer.html
+++ b/tests/app/viewer/viewer.html
@@ -1,6 +1,9 @@
 <m-template>
     <div slot="header">
-        <m-link :underline="false" :unvisited="true" icon-name="m-svg__chevron--left">Retour</m-link>
+        <m-link url="/"
+                :underline="false"
+                :unvisited="true"
+                icon-name="m-svg__chevron--left">Retour</m-link>
         <h1>{{$route.meta}}</h1>
     </div>
     <m-dynamic-template :template="tag"></m-dynamic-template>
